--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-builder --publish=never",
+    "build": "electron-builder",
     "set-version": "node scripts/set-version.js"
   },
   "dependencies": {
