--- a/.github/workflows/server-release.yml
+++ b/.github/workflows/server-release.yml
@@ -4,81 +4,83 @@ on:
   workflow_dispatch:
     inputs:
       release_type:
-        description: "'draft' (default) or 'final'"
+        description: 'Release type (draft or final)'
         required: false
-        default: draft
+        default: 'draft'
 
 jobs:
   release:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    - uses: actions/setup-node@v4
-      with:
-        node-version: 20
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
 
+      - name: Generate timestamp version
+        id: version
+        run: |
+          timestamp=$(date +'%Y.%m.%d.%H%M%S')
+          echo "timestamp=$timestamp" >> $GITHUB_OUTPUT
+          echo "tag=servers-$timestamp" >> $GITHUB_OUTPUT
 
-    - name: Generate version & tag
-      id: version
-      run: |
-        timestamp=$(date +'%Y.%m.%d.%H%M%S')
-        echo "timestamp=$timestamp"   >> "$GITHUB_OUTPUT"
-        echo "tag=servers-$timestamp" >> "$GITHUB_OUTPUT"
+      - name: Install root dependencies
+        run: npm install
+        working-directory: localhost_servers
 
-    - name: npm install (root localhost_servers)
-      run: |
-        echo "→ npm install --omit=dev in localhost_servers/"
-        npm install --omit=dev --prefix localhost_servers
+      - name: Install dependencies per server
+        run: |
+          node -e "
+            const fs = require('fs');
+            const path = require('path');
+            const servers = JSON.parse(fs.readFileSync('localhost_servers/servers.json', 'utf8'));
+            for (const server of servers) {
+              if (server.startNeurite) continue;
+              const dir = path.join('localhost_servers', server.dir);
+              console.log('Installing in', dir);
+              require('child_process').execSync('npm install', {
+                cwd: dir,
+                stdio: 'inherit'
+              });
+            }
+          "
 
-    - name: npm install in each service dir
-      run: |
-        set -e
-        srv_json="localhost_servers/servers.json"
+      - name: Create servers.zip (tracked files only)
+        run: |
+          mkdir release
+          git ls-files localhost_servers | zip -@ release/servers.zip
 
-        mapfile -t DIRS < <(
-          jq -r '.[] | select(.startNeurite|not) | .dir' "$srv_json"
-        )
+      - name: Install GitHub CLI
+        run: |
+          sudo apt update
+          sudo apt install -y gh
 
-        for dir in "${DIRS[@]}"; do
-          echo "→ npm install --omit=dev in localhost_servers/$dir"
-          npm install --omit=dev --prefix "localhost_servers/$dir"
-        done
+      - name: Authenticate GH CLI
+        run: echo "${GH_TOKEN}" | gh auth login --with-token
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Archive localhost_servers
-      run: |
-        mkdir -p release
-        zip -r release/servers.zip localhost_servers \
-          -x "*.git*" ".gitignore"
-
-    - name: Auth GH CLI
-      env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: gh auth login --with-token <<<"${GH_TOKEN}"
-
-    - name: Create GitHub release
-      env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        if [ "${{ github.event.inputs.release_type }}" = "draft" ]; then
-          gh release create "${{ steps.version.outputs.tag }}" release/servers.zip \
-            --draft \
+      - name: Create new dated release
+        run: |
+          gh release create ${{ steps.version.outputs.tag }} release/servers.zip \
             --title "Localhost Servers ${{ steps.version.outputs.timestamp }}" \
-            --notes "Draft bundle of Neurite localhost servers (pre-installed node_modules)."
-        else
-          gh release create "${{ steps.version.outputs.tag }}" release/servers.zip \
-            --title "Localhost Servers ${{ steps.version.outputs.timestamp }}" \
-            --notes "Production bundle of Neurite localhost servers (pre-installed node_modules)."
-        fi
-    - name: Delete old servers-* releases
-      if: ${{ github.event.inputs.release_type != 'draft' }}
-      env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        gh release list --limit 100 --json tagName,createdAt \
-        | jq -r '.[] | select(.tagName | startswith("servers-")) | "\(.createdAt) \(.tagName)"' \
-        | sort -r \
-        | tail -n +2 \
-        | awk '{print $2}' \
-        | xargs -r -n 1 gh release delete -y
+            --notes "Current release of Neurite's localhost servers" \
+            ${{ github.event.inputs.release_type == 'draft' && '--draft' || '' }}
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Delete older servers-* releases (keep latest)
+        if: github.event.inputs.release_type != 'draft'
+        run: |
+          gh release list --limit 100 --json tagName,createdAt \
+          | jq -r '.[] | select(.tagName | startswith("servers-")) | "\(.createdAt) \(.tagName)"' \
+          | sort -r \
+          | tail -n +2 \
+          | awk '{print $2}' \
+          | xargs -r -n 1 gh release delete -y
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
